{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 80,
  "lineage": "0b89d095-b8c2-22ed-f77e-933f6e58f9da",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489619622105:security-group/sg-041d2597bc82e53c2",
            "description": "ALB security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "wildlife-securitygroup-alb"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0d517173f0cca27b8"
                ]
              }
            ],
            "id": "sg-041d2597bc82e53c2",
            "name": "wildlife-securitygroup-alb",
            "region": "us-west-2",
            "tags": {
              "Name": "wildlife-securitygroup-alb",
              "environment": "production",
              "provisioner": "CFN",
              "resourcetype": "security",
              "solution": "SampleDeveloperEnvironment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d517173f0cca27b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489619622105:security-group/sg-09b90e6b4bc7c327a",
            "description": "code-server security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "wildlife-securitygroup-app"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0d517173f0cca27b8"
                ]
              }
            ],
            "id": "sg-09b90e6b4bc7c327a",
            "name": "wildlife-securitygroup-app",
            "region": "us-west-2",
            "tags": {
              "Name": "wildlife-securitygroup-app",
              "environment": "production",
              "provisioner": "CFN",
              "resourcetype": "security",
              "solution": "SampleDeveloperEnvironment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d517173f0cca27b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489619622105:vpc/vpc-0d517173f0cca27b8",
            "cidr_block": "10.180.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cb0b08acee575451",
                "cidr_block": "10.180.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a47b90d2d695298b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "wildlife-vpc01"
                ]
              }
            ],
            "id": "vpc-0d517173f0cca27b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0225ca1cae68e914c",
            "owner_id": "489619622105",
            "region": "us-west-2",
            "tags": {
              "Name": "wildlife-vpc01",
              "environment": "production",
              "provisioner": "CFN",
              "resourcetype": "network",
              "solution": "SampleDeveloperEnvironment"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:loadbalancer/app/wildlife-alb-ecs/2ea2cf5f4b24ce03",
            "arn_suffix": "app/wildlife-alb-ecs/2ea2cf5f4b24ce03",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wildlife-alb-ecs-1286662502.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:489619622105:loadbalancer/app/wildlife-alb-ecs/2ea2cf5f4b24ce03",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wildlife-alb-ecs",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-041d2597bc82e53c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08aa58f43921d094e"
              },
              {
                "subnet_id": "subnet-0ead2e02590203ede"
              }
            ],
            "subnets": [
              "subnet-08aa58f43921d094e",
              "subnet-0ead2e02590203ede"
            ],
            "tags": {
              "Name": "wildlife-alb-ecs",
              "codeblock": "load-balancer",
              "resourcetype": "network"
            },
            "tags_all": {
              "Environment": "workshop",
              "Name": "wildlife-alb-ecs",
              "Provisioner": "Terraform",
              "Solution": "wildlife",
              "codeblock": "load-balancer",
              "resourcetype": "network"
            },
            "vpc_id": "vpc-0d517173f0cca27b8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:loadbalancer/app/wildlife-alb-ecs/2ea2cf5f4b24ce03"
          },
          "dependencies": [
            "data.aws_security_group.alb",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:listener/app/wildlife-alb-ecs/2ea2cf5f4b24ce03/e3de3211826ecb80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:targetgroup/wildlife-targetgroup-ecs/9cfe6dd30adbdfc7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:489619622105:listener/app/wildlife-alb-ecs/2ea2cf5f4b24ce03/e3de3211826ecb80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:loadbalancer/app/wildlife-alb-ecs/2ea2cf5f4b24ce03",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "wildlife-alb-listener",
              "codeblock": "load-balancer",
              "resourcetype": "network"
            },
            "tags_all": {
              "Environment": "workshop",
              "Name": "wildlife-alb-listener",
              "Provisioner": "Terraform",
              "Solution": "wildlife",
              "codeblock": "load-balancer",
              "resourcetype": "network"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:listener/app/wildlife-alb-ecs/2ea2cf5f4b24ce03/e3de3211826ecb80"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "data.aws_security_group.alb",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:targetgroup/wildlife-targetgroup-ecs/9cfe6dd30adbdfc7",
            "arn_suffix": "targetgroup/wildlife-targetgroup-ecs/9cfe6dd30adbdfc7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/wildlife/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:489619622105:targetgroup/wildlife-targetgroup-ecs/9cfe6dd30adbdfc7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:489619622105:loadbalancer/app/wildlife-alb-ecs/2ea2cf5f4b24ce03"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wildlife-targetgroup-ecs",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wildlife-targetgroup-ecs",
              "codeblock": "load-balancer",
              "resourcetype": "network"
            },
            "tags_all": {
              "Environment": "workshop",
              "Name": "wildlife-targetgroup-ecs",
              "Provisioner": "Terraform",
              "Solution": "wildlife",
              "codeblock": "load-balancer",
              "resourcetype": "network"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d517173f0cca27b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489619622105:targetgroup/wildlife-targetgroup-ecs/9cfe6dd30adbdfc7"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP access from user",
            "from_port": 80,
            "id": "sgrule-2796764007",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-west-2",
            "security_group_id": "sg-041d2597bc82e53c2",
            "security_group_rule_id": "sgr-0ee01d1fcf1eef024",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_security_group.alb",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489619622105:vpc-endpoint/vpce-0d1b4a08950a56f1c",
            "dns_entry": [
              {
                "dns_name": "vpce-0d1b4a08950a56f1c-xbdybadm.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0d1b4a08950a56f1c-xbdybadm-us-west-2b.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0d1b4a08950a56f1c-xbdybadm-us-west-2a.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "api.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z087312933GBM8Z3ACQAG"
              },
              {
                "dns_name": "ecr.us-west-2.api.aws",
                "hosted_zone_id": "Z08957552WQ9B4X2XUPRK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d1b4a08950a56f1c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019d2fc9cba0e4b7a",
              "eni-049ad08fd14ed4ea2"
            ],
            "owner_id": "489619622105",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09b90e6b4bc7c327a"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.3.63",
                "subnet_id": "subnet-096926f61ac41df07"
              },
              {
                "ipv4": "10.180.4.215",
                "subnet_id": "subnet-0463be2440692f3e6"
              }
            ],
            "subnet_ids": [
              "subnet-0463be2440692f3e6",
              "subnet-096926f61ac41df07"
            ],
            "tags": {
              "Name": "wildlife-vpce-ecr-api",
              "codeblock": "vpc-endpoints",
              "resourcetype": "network"
            },
            "tags_all": {
              "Environment": "workshop",
              "Name": "wildlife-vpce-ecr-api",
              "Provisioner": "Terraform",
              "Solution": "wildlife",
              "codeblock": "vpc-endpoints",
              "resourcetype": "network"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d517173f0cca27b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_region.current",
            "data.aws_security_group.app",
            "data.aws_subnets.private",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489619622105:vpc-endpoint/vpce-0110a4511b1982753",
            "dns_entry": [
              {
                "dns_name": "vpce-0110a4511b1982753-kz9qwmnr.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0110a4511b1982753-kz9qwmnr-us-west-2a.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0110a4511b1982753-kz9qwmnr-us-west-2b.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z04488792W59FMJOZ4THK"
              },
              {
                "dns_name": "*.dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z04488792W59FMJOZ4THK"
              },
              {
                "dns_name": "dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z0397601OK2K2XRCPYA4"
              },
              {
                "dns_name": "*.dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z0397601OK2K2XRCPYA4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0110a4511b1982753",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06f9f8eccdcef8593",
              "eni-0c67a9663c659a81e"
            ],
            "owner_id": "489619622105",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09b90e6b4bc7c327a"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.3.76",
                "subnet_id": "subnet-096926f61ac41df07"
              },
              {
                "ipv4": "10.180.4.9",
                "subnet_id": "subnet-0463be2440692f3e6"
              }
            ],
            "subnet_ids": [
              "subnet-0463be2440692f3e6",
              "subnet-096926f61ac41df07"
            ],
            "tags": {
              "Name": "wildlife-vpce-ecr-dkr",
              "codeblock": "vpc-endpoints",
              "resourcetype": "network"
            },
            "tags_all": {
              "Environment": "workshop",
              "Name": "wildlife-vpce-ecr-dkr",
              "Provisioner": "Terraform",
              "Solution": "wildlife",
              "codeblock": "vpc-endpoints",
              "resourcetype": "network"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d517173f0cca27b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_region.current",
            "data.aws_security_group.app",
            "data.aws_subnets.private",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489619622105:vpc-endpoint/vpce-00f0899db4eff0394",
            "dns_entry": [
              {
                "dns_name": "vpce-00f0899db4eff0394-5vaer89l.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-00f0899db4eff0394-5vaer89l-us-west-2a.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-00f0899db4eff0394-5vaer89l-us-west-2b.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "logs.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0895753EXV11U2MMIOG"
              },
              {
                "dns_name": "streaming-logs.us-west-2.api.aws",
                "hosted_zone_id": "Z08748562MCLG2E06V0K8"
              },
              {
                "dns_name": "logs.us-west-2.api.aws",
                "hosted_zone_id": "Z08957522USNYQCTM3K4M"
              },
              {
                "dns_name": "streaming-logs.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z089634535HR5B8CE19HN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00f0899db4eff0394",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07c36e6dec5974e24",
              "eni-0ccf486b0bb286f74"
            ],
            "owner_id": "489619622105",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09b90e6b4bc7c327a"
            ],
            "service_name": "com.amazonaws.us-west-2.logs",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.3.251",
                "subnet_id": "subnet-096926f61ac41df07"
              },
              {
                "ipv4": "10.180.4.32",
                "subnet_id": "subnet-0463be2440692f3e6"
              }
            ],
            "subnet_ids": [
              "subnet-0463be2440692f3e6",
              "subnet-096926f61ac41df07"
            ],
            "tags": {
              "Name": "wildlife-vpce-logs",
              "codeblock": "vpc-endpoints",
              "resourcetype": "network"
            },
            "tags_all": {
              "Environment": "workshop",
              "Name": "wildlife-vpce-logs",
              "Provisioner": "Terraform",
              "Solution": "wildlife",
              "codeblock": "vpc-endpoints",
              "resourcetype": "network"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d517173f0cca27b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_region.current",
            "data.aws_security_group.app",
            "data.aws_subnets.private",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}